deploy: b5a03e33aef47a2bf82adc84ad66437c3d9903f0

--- a/rapid-af_8h.html
+++ b/rapid-af_8h.html
@@ -80,6 +80,7 @@ This graph shows which files directly or indirectly include this file:</div>
 <div class="dyncontent">
 <div class="center"><img src="rapid-af_8h__dep__incl.png" border="0" usemap="#rapid-af_8hdep" alt=""/></div>
 <map name="rapid-af_8hdep" id="rapid-af_8hdep">
+<area shape="rect" id="node2" href="rapid-af_8cpp.html" title="rapid&#45;af.cpp" alt="" coords="5,80,104,107"/>
 </map>
 </div>
 </div>
