--- a/rapid-af_8cpp.html
+++ b/rapid-af_8cpp.html
@@ -75,6 +75,7 @@ Include dependency graph for rapid-af.cpp:</div>
 <div class="dyncontent">
 <div class="center"><img src="rapid-af_8cpp__incl.png" border="0" usemap="#rapid-af_8cpp" alt=""/></div>
 <map name="rapid-af_8cpp" id="rapid-af_8cpp">
+<area shape="rect" id="node2" href="rapid-af_8h.html" title="rapid&#45;af.h" alt="" coords="41,80,125,107"/>
 </map>
 </div>
 </div><table class="memberdecls">
